# lyricsx

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
lyricsx/: enhanced_model.py  model.py
lyricsx/parser/: __init__.py  lrc_parser.py
lyricsx/tests/: print_test.py  test_basic.py  test_enhanced.py
