[project]
name = "lyricsx"
version = "0.1.0"
description = "A lyrics parsing and processing library"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "UP", "I"]
ignore = ["F401"]
