[project]
name = "lyricsx"
version = "0.1.0"
description = "A lyrics parsing and processing library"
authors = [
    { name = "Xdyu", email = "xdyu.e@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "UP", "I"]
ignore = ["F401"]
